# kanso

./: CHANGELOG.md  Cargo.toml  README.md  REPORT.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/kanso/: Cargo.toml
crates/kanso/examples/: gallery.rs
crates/kanso/src/: fonts.rs  lib.rs  metrics.rs  palette.rs  scroll.rs  theme.rs
crates/kanso/src/widgets/: about_pane.rs  app_picker.rs  banner.rs  buttons.rs  caption.rs  card.rs  code.rs  color_picker.rs  control.rs  dirty_footer.rs  editable_combo.rs  helpers.rs  info_icon.rs  inputs.rs  link.rs  mod.rs  number_stepper.rs  password_field.rs  progress.rs  radio_group.rs  shortcut_chip.rs  sidebar.rs  slider.rs  toggle.rs
crates/kanso/tests/: smoke.rs
