[workspace]
resolver = "3"
members = ["crates/kanso"]

[workspace.package]
version = "0.1.5"
edition = "2024"
authors = ["Jon Kinney <jon@headway.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jondkinney/kanso"
rust-version = "1.85"

[workspace.dependencies]
kanso = { path = "crates/kanso", version = "0.1.5" }
egui = "0.32"
# Only used by examples (dev-dependency) — kept in sync with the apps
# that consume kanso (vernier, hyprcorrect both on eframe 0.32).
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "wayland",
    "x11",
    "glow",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
